sandbox/monitoring/network-policies/allow-grafana-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grafana-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
    - Egress
  egress:
    # Allow to connect to prometheus
    - to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 9090
        protocol: TCP
    # Allow to download dashboards
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
        protocol: TCP
